--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,15 @@ jobs:
           python-version: ${{ matrix.python }}
 
       - run: python -m pip install -U pip
-      - run: python -m pip install setuptools wheel flake8 twine pytest
+      - run: python -m pip install setuptools wheel twine
+      - run: python -m pip install flake8 pytest coverage
 
       - run: python setup.py sdist bdist_wheel
       - run: python -m pip install dist/*.whl
 
       - run: twine check dist/*
       - run: flake8
-      - run: pytest
+      - run: coverage run --source=funcwrap -m pytest
 
       - name: Publish PyPI package
         if: startsWith(github.ref, 'refs/tags/v') &&
@@ -43,3 +44,8 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: twine upload dist/*.whl dist/*.tar.gz
+
+      - run: bash <(curl -s https://codecov.io/bash)
+        if: env.CODECOV_TOKEN != ''
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
